[package]
name = "rust-curl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
tokio = {version = "1.18.2", features = ["full"]}
reqwest = "0.11.10"
dialoguer = "0.10.1"
colored = "2.0.0"